--- a/style.css
+++ b/style.css
@@ -12,13 +12,13 @@ html {
 * {
   margin: 0;
   line-height: calc(1em + 0.6rem);
+  -webkit-font-smoothing: antialiased;
 }
 
 body {
   height: 100%;
   font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  -webkit-font-smoothing: antialiased;
 }
 
 img,
@@ -57,4 +57,49 @@ h4,
 h5,
 h6 {
   text-wrap: balance;
+}
+
+header {
+  background-color: #1f2937;
+}
+
+h1 {
+  font-size: 48px;
+  color: #f9faf8;
+  font-weight: 900;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+  vertical-align: middle;
+  padding: 0;
+  gap: 2em;
+}
+
+ul a {
+  color: #e5e7eb;
+}
+
+.info p {
+  font-size: 18px;
+  color: #e5e7eb;
+}
+
+.logo {
+  font-size: 24px;
+  font-weight: 700;
+  color: #f9faf8;
+  margin-right: auto;
+}
+
+.quote {
+  background-color: #e5e7eb;
+}
+
+blockquote {
+  font-size: 36px;
+  font-weight: 300;
+  font-style: italic;
+  color: #1f2937;
 }
