--- a/style.css
+++ b/style.css
@@ -174,6 +174,7 @@ blockquote p {
 .hero {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   gap: 2em;
   padding: 40px 0 60px;
 }
@@ -201,6 +202,7 @@ blockquote p {
   color: #fff;
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
   align-items: center;
   border-radius: 0.4em;
   padding: 50px 0;
