--- a/v2/style.css
+++ b/v2/style.css
@@ -1,5 +1,4 @@
 html {
-  height: 100%;
   box-sizing: border-box;
 }
 
@@ -16,9 +15,7 @@ html {
 }
 
 body {
-  height: 100%;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: Roboto, sans-serif;
 }
 
 button {
@@ -27,6 +24,7 @@ button {
 
 a {
   text-decoration: none;
+  color: #f9faf8;
 }
 
 ul {
@@ -36,17 +34,43 @@ ul {
   padding: 0;
 }
 
+/* logo */
 ul li:first-of-type {
   margin-right: auto;
+  font-size: 24px;
+  color: #f9faf8;
 }
 
 header {
   padding: 1em 0;
+  background-color: #1f2937;
 }
 
 main section {
   width: 100%;
   padding: 5em 2em;
+}
+
+.hero {
+  background-color: #1f2937;
+  color: #e5e7eb;
+  font-size: 18px;
+  font-weight: 900;
+}
+
+.quote {
+  background-color: #e5e7eb;
+}
+
+blockquote {
+  font-size: 36px;
+  font-style: italic;
+  font-weight: 300;
+}
+
+h1 {
+  font-size: 48px;
+  color: #f9faf8;
 }
 
 .container {
@@ -57,4 +81,6 @@ main section {
 footer {
   padding: 2em 0;
   text-align: center;
+  background-color: #1f2937;
+  color: #f9faf8;
 }
