--- a/v2/style.css
+++ b/v2/style.css
@@ -20,6 +20,12 @@ body {
 
 button {
   font: inherit;
+  background-color: #3882f6;
+  color: white;
+  border: none;
+  border-radius: 0.3em;
+  padding: 0.3em 1.5em;
+  font-weight: 800;
 }
 
 a {
@@ -32,12 +38,14 @@ ul {
   display: flex;
   gap: 2em;
   padding: 0;
+  align-items: center;
 }
 
 /* logo */
 ul li:first-of-type {
   margin-right: auto;
   font-size: 24px;
+  font-weight: 800;
   color: #f9faf8;
 }
 
@@ -55,22 +63,60 @@ main section {
   background-color: #1f2937;
   color: #e5e7eb;
   font-size: 18px;
-  font-weight: 900;
+}
+
+.hero-info {
+  display: flex;
+  gap: 2em;
+}
+
+.info p {
+  margin-bottom: 0.5em;
+}
+
+.panels {
+  display: flex;
+  text-align: center;
+  justify-content: space-around;
+}
+
+.panels div {
+  width: 150px;
+}
+
+.panels img {
+  border-radius: 0.5em;
+  border: 3px solid #3882f6;
 }
 
 .quote {
   background-color: #e5e7eb;
 }
 
+.cite {
+  text-align: right;
+  font-size: 20px;
+  font-weight: 500;
+}
+
 blockquote {
   font-size: 36px;
   font-style: italic;
   font-weight: 300;
+  margin-bottom: 0.5em;
 }
 
 h1 {
   font-size: 48px;
   color: #f9faf8;
+}
+
+h2 {
+  font-size: 36px;
+  color: #1f2937;
+  font-weight: 900;
+  text-align: center;
+  margin-bottom: 1.5em;
 }
 
 .container {
