Change logo selector

--- a/v2/style.css
+++ b/v2/style.css
@@ -41,8 +41,7 @@ ul {
   align-items: center;
 }
 
-/* logo */
-ul li:first-of-type {
+.logo {
   margin-right: auto;
   font-size: 24px;
   font-weight: 800;
