--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 html {
-  height: 100%;
   box-sizing: border-box;
 }
 
@@ -11,203 +10,163 @@ html {
 
 * {
   margin: 0;
-  line-height: calc(1em + 0.6rem);
+  line-height: calc(1em + 0.5rem);
   -webkit-font-smoothing: antialiased;
 }
 
 body {
-  height: 100%;
-  font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-img,
-picture,
-video,
-canvas,
-svg {
-  display: block;
-  max-width: 100%;
-}
-
-input,
-button,
-textarea,
-select {
-  font: inherit;
-}
-
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  overflow-wrap: break-word;
-}
-
-p {
-  text-wrap: pretty;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  text-wrap: balance;
-}
-
-nav {
-  width: 80%;
-  margin: 0 auto;
-  padding: 15px 0;
-}
-
-header {
-  background-color: #1f2937;
-}
-
-footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #1f2937;
-  color: #f9faf8;
-  padding: 25px 0;
-}
-
-h1 {
-  font-size: 48px;
-  color: #f9faf8;
-  font-weight: 900;
-}
-
-h2 {
-  font-size: 36px;
-  font-weight: 900;
-  color: #1f2937;
-  text-align: center;
-}
-
-ul {
-  list-style: none;
-  display: flex;
-  vertical-align: middle;
-  padding: 0;
-  gap: 2em;
-}
-
-ul a {
-  color: #e5e7eb;
-  text-decoration: none;
+  font-family: Roboto, sans-serif;
 }
 
 button {
-  background-color: #3c82f6;
+  font: inherit;
+  background-color: #3882f6;
   color: white;
-  border-radius: 0.4em;
-  padding: 0.3em 2em;
   border: none;
-  -webkit-appearance: none;
-  appearance: none;
-  box-shadow: none;
-  cursor: pointer;
+  border-radius: 0.3em;
+  padding: 0.3em 1.5em;
   font-weight: 800;
 }
 
-blockquote {
-  font-size: 36px;
-  font-weight: 300;
-  font-style: italic;
-  color: #1f2937;
-  width: 80%;
-  margin: 0 auto;
-  padding: 40px 0;
+a {
+  text-decoration: none;
+  color: #f9faf8;
 }
 
-blockquote p {
-  font-size: 24px;
-  font-weight: 500;
-  font-style: normal;
-  text-align: right;
-  padding-top: 0.5em;
-}
-
-.container {
-  width: 80%;
-  margin: 0 auto;
-  padding: 50px 0;
-}
-
-.content {
+ul {
+  list-style-type: none;
   display: flex;
-  justify-content: space-evenly;
+  gap: 2em;
+  padding: 0;
   align-items: center;
-  flex-wrap: wrap;
-  padding: 40px 0 90px;
-}
-
-.content div {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  gap: 1em;
-  width: 150px;
-}
-
-.content div img {
-  border: 0.2em solid #3c82f6;
-  border-radius: 0.4em;
 }
 
 .logo {
-  font-size: 24px;
-  font-weight: 700;
-  color: #f9faf8;
   margin-right: auto;
+  font-size: 24px;
+  font-weight: 800;
+  color: #f9faf8;
+}
+
+header {
+  padding: 1em;
+  background-color: #1f2937;
+}
+
+main section {
+  width: 100%;
+  padding: 5em 2em;
 }
 
 .hero {
+  background-color: #1f2937;
+  color: #e5e7eb;
+  font-size: 18px;
+}
+
+.hero-info {
   display: flex;
-  justify-content: space-between;
   flex-wrap: wrap;
+  justify-content: space-between;
   gap: 2em;
-  padding: 40px 0 60px;
 }
 
 .info {
-  flex-basis: 50%;
+  flex: 1;
 }
 
 .info p {
-  font-size: 18px;
-  color: #e5e7eb;
-  margin-bottom: 0.666em;
+  margin-bottom: 0.5em;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+
+.panels {
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+  justify-content: space-around;
+  gap: 2em;
+}
+
+.panels div {
+  width: 150px;
+}
+
+.panels img {
+  border-radius: 0.5em;
+  border: 3px solid #3882f6;
 }
 
 .quote {
   background-color: #e5e7eb;
 }
 
-.call-to-action {
-  margin: 50px 0;
+.cite {
+  text-align: right;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+blockquote {
+  font-size: 36px;
+  font-style: italic;
+  font-weight: 300;
+  margin-bottom: 0.5em;
+}
+
+h1 {
+  font-size: 48px;
+  color: #f9faf8;
+}
+
+h2 {
+  font-size: 36px;
+  color: #1f2937;
+  font-weight: 900;
+  text-align: center;
+  margin-bottom: 1.5em;
 }
 
 .cta-box {
-  background-color: #3c82f6;
-  color: #fff;
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  align-items: center;
-  border-radius: 0.4em;
-  padding: 50px 0;
+  background-color: #3882f6;
+  border-radius: 0.5em;
+  width: 100%;
+  padding-block: 4em;
 }
 
-.cta-box button {
+.cta-info {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  color: #f9faf8;
+  padding-inline: 1em;
+  gap: 2em;
+}
+
+.cta-info button {
   border: 0.1em solid white;
+}
+
+.cta-box .title {
+  font-weight: 700;
+  display: block;
+  font-size: 1.2em;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 900px;
+}
+
+footer {
+  padding: 2em 0;
+  text-align: center;
+  background-color: #1f2937;
+  color: #f9faf8;
 }
