--- a/style.css
+++ b/style.css
@@ -18,6 +18,35 @@ body {
   font-family: Roboto, sans-serif;
 }
 
+header {
+  padding: 1em;
+  background-color: #1f2937;
+}
+
+h1 {
+  font-size: 48px;
+  color: #f9faf8;
+}
+
+h2 {
+  font-size: 36px;
+  color: #1f2937;
+  font-weight: 900;
+  text-align: center;
+  margin-bottom: 1.5em;
+}
+
+main section {
+  width: 100%;
+  padding: 5em 2em;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+
 button {
   font: inherit;
   background-color: #3882f6;
@@ -41,21 +70,25 @@ ul {
   align-items: center;
 }
 
+blockquote {
+  font-size: 36px;
+  font-style: italic;
+  font-weight: 300;
+  margin-bottom: 0.5em;
+}
+
+footer {
+  padding: 2em 0;
+  text-align: center;
+  background-color: #1f2937;
+  color: #f9faf8;
+}
+
 .logo {
   margin-right: auto;
   font-size: 24px;
   font-weight: 800;
   color: #f9faf8;
-}
-
-header {
-  padding: 1em;
-  background-color: #1f2937;
-}
-
-main section {
-  width: 100%;
-  padding: 5em 2em;
 }
 
 .hero {
@@ -79,12 +112,6 @@ main section {
   margin-bottom: 0.5em;
 }
 
-img {
-  max-width: 100%;
-  height: auto;
-  display: block;
-}
-
 .panels {
   display: flex;
   flex-wrap: wrap;
@@ -100,6 +127,7 @@ img {
 .panels img {
   border-radius: 0.5em;
   border: 3px solid #3882f6;
+  margin-block-end: 0.5em;
 }
 
 .quote {
@@ -110,26 +138,6 @@ img {
   text-align: right;
   font-size: 20px;
   font-weight: 500;
-}
-
-blockquote {
-  font-size: 36px;
-  font-style: italic;
-  font-weight: 300;
-  margin-bottom: 0.5em;
-}
-
-h1 {
-  font-size: 48px;
-  color: #f9faf8;
-}
-
-h2 {
-  font-size: 36px;
-  color: #1f2937;
-  font-weight: 900;
-  text-align: center;
-  margin-bottom: 1.5em;
 }
 
 .cta-box {
@@ -162,11 +170,4 @@ h2 {
 .container {
   margin: 0 auto;
   max-width: 900px;
-}
-
-footer {
-  padding: 2em 0;
-  text-align: center;
-  background-color: #1f2937;
-  color: #f9faf8;
 }
